[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mkvdb"
version = "0.4"
description = "MongoDB-backed async/sync key–value store with a super tiny API."
keywords = [
    "key-value",
    "database",
    "mongodb",
    "asyncio",
    "motor",
    "kv",
    "cache",
]
readme = "README.md"
authors = [{ name = "Harrison Erd", email = "harrisonerd@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pymongo>=4.15.5"]

classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/patx/mkvdb"
Homepage = "https://patx.github.io/mkvdb"

